# scraping_web_9

dz9_Scraping/: pyproject.toml
dz9_Scraping/scrapy_web_9/: scrapy.cfg
dz9_Scraping/scrapy_web_9/scrapy_web_9/: items.py  middlewares.py  pipelines.py  settings.py
dz9_Scraping/scrapy_web_9/scrapy_web_9/spiders/: authors_spider.py  quotes_spider.py
